# aoc23

./: .gitignore  CMakeLists.txt  LICENSE  README.md  day01.cpp  day01.h  day01_test.cpp  utils.cpp  utils.h
sources/: day02.cpp  day02.h  day02_test.cpp  day03.cpp  day03.h  day03_test.cpp  day04.cpp  day04.h  day04_test.cpp  day05.cpp  day05.h  day06.cpp  day06.h  day06_test.cpp  day07.cpp  day07.h  day08.cpp  day08.h  day09.cpp  day09.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h  day13.cpp  day13.h  day14.cpp  day14.h  day15.cpp  day15.h  day16.cpp  day16.h  main.cpp  run_all.cpp  utils.cpp  utils.h
tests/: day01_test.cpp  day02_test.cpp  day03_test.cpp  day04_test.cpp  day05_test.cpp  day06_test.cpp  day07_test.cpp  day08_test.cpp  day09_test.cpp  day10_test.cpp  day11_test.cpp  day12_test.cpp  day13_test.cpp  day14_test.cpp  day15_test.cpp
